Fixed alignment of featured work cards and two cards on home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,267 +1,313 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap');
 
 body {
-  font-family: 'Rubik', sans-serif;
+	font-family: 'Rubik', sans-serif;
 }
 
 /* NAVIGATION */
 #homeNav {
-  padding: 0;
+	padding: 0;
 }
 
 #mainNavbar {
-  border-bottom: solid 0.25px #d1d1d1;
+	border-bottom: solid 0.25px #d1d1d1;
 }
 
 .nav-link {
-  color: #575656;
+	color: #575656;
 }
 
 .nav-link:hover {
-  color: #878787;
+	color: #878787;
 }
 
 .link {
-  color: #050505;
+	color: #050505;
 }
 
 .link:hover {
-  color: lightgray;
+	color: lightgray;
 }
 
 /* INTRO */
 #intro {
-  margin: 0px;
-  padding-top: 75px;
-  padding-bottom: 70px;
+	margin: 0px;
+	padding-top: 75px;
+	padding-bottom: 70px;
 }
 
 #intro::before {
-  content: '';
-  background-color: gray;
-  background-image: url(./introBackground2.jpg);
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.5;
+	content: '';
+	background-color: gray;
+	background-image: url(./introBackground2.jpg);
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	opacity: 0.5;
 }
 
 #intro h1 {
-  position: relative;
-  font-size: 6em;
-  font-weight: 200;
-  margin-left: 20%;
+	position: relative;
+	font-size: 6em;
+	font-weight: 200;
+	margin-left: 20%;
 }
 
 #intro h3 {
-  position: relative;
-  font-size: 3.5em;
-  font-weight: 200;
-  margin-left: 45%;
+	position: relative;
+	font-size: 3.5em;
+	font-weight: 200;
+	margin-left: 45%;
 }
 
 #intro p {
-  font-size: larger;
+	font-size: larger;
 }
 
 #intro hr {
-  border: 0.5px solid;
-  width: 60%;
-  align-items: center;
+	border: 0.5px solid;
+	width: 60%;
+	align-items: center;
 }
 
 #paymentModalHeader {
-  background-color: #212181;
-  color: white;
+	background-color: #212181;
+	color: white;
 }
 
 #modalClose {
-  color: white;
+	color: white;
 }
 
 /* WELCOME */
+
+.homeCard {
+	max-height: 20rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.cardBody {
+	display: flex;
+	flex-direction: column;
+	max-height: 20rem;
+	justify-content: space-between;
+}
+
+.cardBody2 {
+	margin-top: 3.25rem;
+}
+
 #welcome {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  font-family: 'Rubik', sans-serif;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	font-family: 'Rubik', sans-serif;
 }
 
 #mission {
-  align-self: center;
-  max-width: 350px;
-  background-color: #f1f1f1;
+	align-self: center;
+	max-width: 22rem;
+	height: 20rem;
+	background-color: #f1f1f1;
 }
 
 #featured {
-  align-self: center;
-  max-width: 350px;
-  background-color: #f1f1f1;
+	align-self: center;
+	max-width: 22rem;
+	max-height: 30rem;
+	background-color: #f1f1f1;
+	margin-top: 1.5rem;
 }
 
 #welcomeCol {
-  padding: 0;
+	padding: 0;
 }
 
 #buttonDiv {
-  justify-content: center;
-  display: flex;
+	justify-content: center;
+	display: flex;
 }
 
 /* FEATURED WORK */
+.featureContainer {
+	justify-content: center;
+}
+
 #featureImage:hover {
-  opacity: 0.7;
-  transition-duration: 0.5;
-  cursor: pointer;
+	opacity: 0.7;
+	transition-duration: 0.5;
+	cursor: pointer;
 }
 
 #featureModalHeader {
-  max-height: 0;
+	max-height: 0;
 }
 
 .row-content {
-  min-height: 200px;
+	min-height: 200px;
 }
 
 /* CONTACT FORM */
 #contactForm {
-  background: rgba(0, 0, 0, 0.3);
-  color: white;
-  margin-top: 100px;
-  padding: 20px;
-  margin-bottom: 25px;
+	background: rgba(0, 0, 0, 0.3);
+	color: white;
+	margin-top: 100px;
+	padding: 20px;
+	margin-bottom: 25px;
 }
 
 #contactForm a {
-  color: #e6e1e1;
+	color: #e6e1e1;
 }
 
 button a {
-  color: white;
+	color: white;
 }
 
 a {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 /* ABOUT */
 #aboutPhoto {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 15px;
+	max-width: 100%;
+	height: auto;
+	margin-bottom: 15px;
 }
 
 #aboutBreak {
-  border: 1px solid;
-  width: 60%;
-  align-items: center;
-  margin-bottom: 40px;
+	border: 1px solid;
+	width: 60%;
+	align-items: center;
+	margin-bottom: 40px;
 }
 
 #descriptionContent {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 /* SERVICES */
 #servicesTitle {
-  padding: 35px;
+	padding: 35px;
 }
 
 #servicesContent {
-  padding-top: 25px;
+	padding-top: 25px;
 }
 #servicesContent hr {
-  border: 0.5px solid;
-  width: 60%;
-  align-items: center;
-  margin-bottom: 55px;
+	border: 0.5px solid;
+	width: 60%;
+	align-items: center;
+	margin-bottom: 55px;
 }
 
 #printIcon {
-  background-color: rgba(255, 0, 0, 0.185);
+	background-color: rgba(255, 0, 0, 0.185);
 }
 
 #embroideryIcon {
-  background-color: rgba(0, 0, 255, 0.205);
+	background-color: rgba(0, 0, 255, 0.205);
 }
 
 #vinylIcon {
-  background-color: rgba(0, 128, 0, 0.219);
+	background-color: rgba(0, 128, 0, 0.219);
 }
 
 /* FOOTER */
 .site-footer {
-  padding: 25px;
-  border-top: solid 0.25px #d1d1d1;
-  background-color: #ebebeb;
+	padding: 25px;
+	border-top: solid 0.25px #d1d1d1;
+	background-color: #ebebeb;
 }
 .site-footer .btn {
-  color: black;
+	color: black;
 }
 
 /* MEDIA QUERIES */
 /* 'Truthreads' */
 @media screen and (max-width: 600px) {
-  #intro h1 {
-    font-size: 5em;
-  }
+	#intro h1 {
+		font-size: 5em;
+	}
 }
 
 @media screen and (max-width: 500px) {
-  #intro h1 {
-    font-size: 4em;
-    margin-left: 15%;
-  }
+	#intro h1 {
+		font-size: 4em;
+		margin-left: 15%;
+	}
 }
 
 @media screen and (max-width: 400px) {
-  #intro h1 {
-    font-size: 3.5em;
-    margin-left: 15%;
-  }
+	#intro h1 {
+		font-size: 3.5em;
+		margin-left: 15%;
+	}
 }
 
 @media screen and (max-width: 350px) {
-  #intro h1 {
-    font-size: 2.5em;
-    margin-left: 15%;
-  }
+	#intro h1 {
+		font-size: 2.5em;
+		margin-left: 15%;
+	}
 }
 
 @media screen and (max-width: 250px) {
-  #intro h1 {
-    font-size: 2em;
-    margin-left: 15%;
-  }
+	#intro h1 {
+		font-size: 2em;
+		margin-left: 15%;
+	}
 }
 
 /* 'Custom Apparel' */
 @media screen and (max-width: 500px) {
-  #intro h3 {
-    font-size: 3em;
-    margin-left: 10%;
-  }
+	#intro h3 {
+		font-size: 3em;
+		margin-left: 10%;
+	}
 }
 
 @media screen and (max-width: 400px) {
-  #intro h3 {
-    font-size: 2.5em;
-    margin-left: 10%;
-  }
+	#intro h3 {
+		font-size: 2.5em;
+		margin-left: 10%;
+	}
 }
 
 @media screen and (max-width: 350px) {
-  #intro h3 {
-    font-size: 2em;
-    margin-left: 10%;
-  }
+	#intro h3 {
+		font-size: 2em;
+		margin-left: 10%;
+	}
 }
 
 @media screen and (max-width: 250px) {
-  #intro h3 {
-    font-size: 1.5em;
-    margin-left: 10%;
-  }
+	#intro h3 {
+		font-size: 1.5em;
+		margin-left: 10%;
+	}
+}
+
+@media (min-width: 992px) {
+	#featured {
+		margin-top: 0;
+	}
+
+	.cardBody2 {
+		margin-top: 1.9rem;
+	}
+}
+
+@media (min-width: 1200px) {
+	#featured {
+		margin-top: 0;
+	}
+
+	.cardBody2 {
+		margin-top: 0;
+	}
 }
